--- a/McKinseyHackAndroid/app/src/main/res/layout/fragment_jobs.xml
+++ b/McKinseyHackAndroid/app/src/main/res/layout/fragment_jobs.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.jordanleex13.mckinseyhackandroid.JobsFragment">
 
 
@@ -9,8 +10,7 @@
         android:id="@+id/fragment_jobs_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top_margin"
         android:fastScrollEnabled="true" >
     </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+</LinearLayout>
