Implemented viewpager and google maps fragment within jobs

--- a/McKinseyHackAndroid/app/src/main/res/layout/activity_job.xml
+++ b/McKinseyHackAndroid/app/src/main/res/layout/activity_job.xml
@@ -16,10 +16,22 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-    <FrameLayout
-        android:id="@+id/activity_job_container"
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_jobs_pager"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/activity_job_toolbar"/>
+        android:layout_below="@id/activity_job_toolbar">
+
+        <android.support.v4.view.PagerTitleStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="@color/white"
+            android:textColor="@color/black" />
+
+    </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
