--- a/McKinseyHackAndroid/app/src/main/res/layout/fragment_main.xml
+++ b/McKinseyHackAndroid/app/src/main/res/layout/fragment_main.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Welcome"
-            android:textSize="@dimen/large_text"
+            android:textSize="@dimen/extra_large_text"
             android:fontFamily="sans-serif-light"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/small_margin"/>
@@ -46,11 +46,11 @@
                     android:layout_below="@id/fragment_main_education_logo"/>
 
                 <ImageButton
-                    android:id="@+id/fragment_main_religion_logo"
+                    android:id="@+id/fragment_main_news_logo"
                     android:layout_width="@dimen/category_icon_size"
                     android:layout_height="@dimen/category_icon_size"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/religion_logo"
+                    android:src="@drawable/news_logo"
                     android:layout_below="@id/fragment_main_jobs_logo"/>
             </RelativeLayout>
 
