--- a/McKinseyHackAndroid/app/src/main/res/layout/activity_jobs.xml
+++ b/McKinseyHackAndroid/app/src/main/res/layout/activity_jobs.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.jordanleex13.mckinseyhackandroid.JobActivity">
+    tools:context="com.jordanleex13.mckinseyhackandroid.JobsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/activity_job_toolbar"
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
+        android:titleTextColor="@color/white"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
@@ -25,12 +26,13 @@
         android:layout_height="match_parent"
         android:layout_below="@id/activity_job_toolbar">
 
-        <android.support.v4.view.PagerTitleStrip
+        <android.support.v4.view.PagerTabStrip
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@color/white"
-            android:textColor="@color/black" />
+            android:layout_gravity="bottom"
+            android:paddingTop="@dimen/medium_margin"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white" />
 
     </android.support.v4.view.ViewPager>
 
